# electrical

./: CMakeLists.txt  main.cpp  test_input_1.txt
ContactorsSimulation/: CMakeLists.txt  Class members.docx  README.txt  directory tree.txt  ~$ass members.docx
ContactorsSimulation/header/: AuxiliaryContact.h  ContactFunctions.h  ErrorHandling.h  MainContact.h  Port.h  contactor.h  state.h
ContactorsSimulation/src/: ContactFunctions.cpp  contactor.cpp  main.cpp
Processors/AVR/: CMakeLists.txt
Processors/AVR/core/: CMakeLists.txt
Processors/AVR/core/at16/: core16.cpp  core16.h  instruction_set.h
Processors/AVR/core/at16/parser/: CMakeLists.txt  lexer.l  parser.y
gui/: CMakeLists.txt  gui_component.cpp  gui_component.h  splash_screen.cpp  splash_screen.h
include/: power_system.h
include/lib/: BusType.h  PowerSystemError.h  Readme.md  bus.h  capacitor.h  circuit_breaker.h  config.h  generator.h  grid.h  input_parser.h  jacobian.h  line.h  load.h  parser_utils.h  powerflow.h  relay.h  sld.h  transformer.h  voltage.h
include/lib/components/: CT.h  PT.h
include/lib/study/: arc_flash.h  automatic_device_evaluation.h  dc_short_circuit.h  harmonic.h  load_flow.h  power_factor_correction.h  protection_coordination.h  short_circuit.h  transient_stability.h
laderlogic/: CMakeLists.txt  Readme.md  coil.cpp  contact.cpp  contact.h  ladder_logic.txt  ladder_parser.h  main.cpp  output_element.cpp  output_element.h  pushbutton.cpp  pushbutton.h  rung.cpp  rung.h  rung_element.h  rung_submodule.h  simulator.cpp  simulator.h  timer_element.cpp  wire.cpp
laderlogic/include/: file_handler.h  ladder.h  ladder_parser.h  logic_element.h  output_element.h  parser.h  rung.h  rung_element.h  simulator.h  timer_element.h  wire.h
laderlogic/include/elements/: bulb.h  coil.h  contact.h  logic_element.h  output_element.h  pushbutton.h  rung_element.h  rung_submodule.h
laderlogic/src/: bulb.cpp  coil.cpp  contact.cpp  file_handler.cpp  ladder.cpp  ladder_parser.cpp  logic_element.cpp  main.cpp  output_element.cpp  parser.cpp  pushbutton.cpp  rung.cpp  rung_element.cpp  rung_submodule.cpp  simulator.cpp  timer_element.cpp  wire.cpp
lib/: lexer.l  parser.y
processor update 2225/: CMakeLists.txt
processor update 2225/include/: memory.h
processor update 2225/src/: CMakeLists.txt  main.cpp
processor update 2225/src/communication/: CMakeLists.txt  SerialCommunication.cpp  SerialCommunication.h
processor update 2225/src/cpu/: ALUOperations.cpp  CMakeLists.txt  InstructionExecution.cpp  cpu.cpp  cpu.h  readme.md
processor update 2225/src/gui/: CMakeLists.txt
processor update 2225/src/gui/glade/: avr_simulator.glade
processor update 2225/src/gui/src/: gui.cpp  gui.h  main_window.cpp  main_window.h
processor update 2225/src/mcu/: CMakeLists.txt  mcu.cpp  mcu.h  readme.md
processor update 2225/src/memory/: CMakeLists.txt  memory.cpp  memory.h  readme.md
processor update 2225/src/peripherals/: CMakeLists.txt  PWMChannel.cpp  PWMChannel.h  Readme.md  Redme.md  SPI.cpp  SPI.h  Timer.cpp  Timer.h  USART.cpp  adc.cpp  adc.h  jtag.cpp  jtag.h  peripherals.cpp  peripherals.h  port.cpp  port.h  usart.h
processor update 2225/src/twi/: CMakeLists.txt  twi.cpp  twi.h
processor update 2225/src/watchdogtimer/: CMakeLists.txt  watchdogtimer.cpp  watchdogtimer.h
pt/: CMakeLists.txt  main.cpp  pt.cpp  pt.h
solver/: CMakeLists.txt  New Text Document.txt  PowerSystem.cpp  PowerSystemError.h  Readme.md  SLD.txt  SLD_d.txt  bus.cpp  bus.h  capacitor.cpp  capacitor.h  circuit_breaker.h  directorystructure.txt  generator.cpp  generator.h  input_parser.h  jacobian.h cpp  lexer.yy.h  line.h  load.cpp  load.h  main.cpp  network_config.txt  output_generator.cpp  power_system.cpp  power_system.h  powerflow.cpp  powerflow.h  reactor.h  readme  relay.cpp  relay.h  test_input_1.txt  to_do.txt  transmission_line.cpp  transmission_line.h  unit_tests.cpp
solver/include/: BusType.h  CT.h  Generator.h  Load.h  PT.h  bus.h  capacitor.h  circuit_breaker.h  generator.h  grid.h  input_parser.h  jacobian.h  lexer.yy.h  line.h  load.h  output_generator.h  power_system.h  powerflow.h  sld.h  transformer.h  transmission_line.h
solver/include/lib/: Attribute.h  CT.h  PT.h  bus.h  capacitor.h  current.h  generator.h  grid.h  input_parser.h  line.h  load.h  matrix_utils.h  output_generator.h  powerflow.h  reactor.h  sld.h  transformer.h  transmission_line.h  voltage.h
solver/include/lib/study/: dc_load_flow.h  motor_starting.h  power_quality.h  power_system_study.h  voltage_drop.h  voltage_imbalance.h
solver/lib/: CMakeLists.txt  Readme.md  lexer.l  parser.tab.c  parser.tab.h  parser.y  test.y
solver/src/: CT.cpp  PT.cpp  bus.cpp  capacitor.cpp  circuit_breaker.cpp  grid.cpp  input_parser.cpp  jacobian.cpp  load.cpp  main.cpp  power_system.cpp  powerflow.cpp  reactor.cpp  sld.cpp  transformer.cpp
solver/src/lib/: CT.cpp  bus.cpp  capacitor.cpp  current.cpp  grid.cpp  input_parser.cpp  line.cpp  matrix_utils.cpp  parser_util.cpp  relay.cpp  sld.cpp  transmission_line.cpp  voltage.cpp
solver/tests/: CMakeLists.txt  run_tests.cpp  test_input_2.txt  unit_tests.cpp
src/: main.cpp  output_generator.cpp  power_system.cpp
src/lib/: CT.cpp  PT.cpp  bus.cpp  circuit_breaker.cpp  config.cpp  current.cpp  generator.cpp  grid.cpp  input_parser.cpp  jacobian.cpp  line.cpp  load.cpp  reactor.cpp  sld.cpp  transformer.cpp  voltage.cpp
src/lib/studies/: load_flow.cpp
tests/: expected_output_1.txt  main.cpp  test_input_1.txt
